[package]
name = "lf2_parse"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[dependencies]
# lf2_codec = "0.1.0"
pest = "2.0"
pest_derive = "2.0"

# Wanted to use `typed-builder` as it has compile time safety, and compiles faster.
# However, the compile time safety makes it difficult to write generic logic to build up a data type.
derive_builder = "0.9.0"
