[package]
name = "lf2_parse"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
description = "Parses Little Fighter 2 (LF2) data files"
documentation = "https://docs.rs/lf2_parse"
edition = "2018"
homepage = "https://github.com/azriel91/lf2_parse"
keywords = ["lf2"]
license = "Zlib"
license-file = "LICENSE-ZLIB.md"
maintenance = { status = "passively-maintained" }
readme = "README.md"
repository = "https://github.com/azriel91/lf2_parse"

[dependencies]
lf2_codec = "0.2.1"
pest = "2.0"
pest_derive = "2.0"
tinyvec = { version = "1.0.1", features = ["alloc"] }
